United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7045232 G1: pool names are inconsistent with other collectors (don't have 'Space')
7045232 : G1: pool names are inconsistent with other collectors (don't have 'Space')

Details
Type:
Bug
Submit Date:
2011-05-16
Status:
Closed
Updated Date:
2012-12-05
Project Name:
JDK
Resolved Date:
2012-01-23
Component:
hotspot
OS:
generic
Sub-Component:
gc
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs21,6
Fixed Versions:
hs23

Related Reports
Backport:
Backport:
Backport:
Backport:

Sub Tasks

Description
tmtools/jstat/shareGC/MemoryPoolsDataProvidingDebuggee.java expects Eden space and Survivor space memory bean names (returned by getName()) to contain the word "Space" in them. G1 beans don't have that

                                    

Comments
EVALUATION

See main CR
                                     
2011-10-22
EVALUATION

http://hg.openjdk.java.net/hsx/hsx22/hotspot/rev/2115638addd2
                                     
2011-10-12
SUGGESTED FIX

Rename eden memory pool to "G1 Eden Space" and survivor memory pool to "G1 Survivor Space".
                                     
2011-09-21
EVALUATION

See Description and Suggested Fix.
                                     
2011-09-21
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-gc/hotspot/rev/114e52976463
                                     
2011-09-21



Hardware and Software, Engineered to Work Together