7045232: G1: pool names are inconsistent with other collectors (don't have 'Space')

Make sure the eden and survivor pools have "Space" in their name.

Reviewed-by: jmasa, ysr